[gui-components] remove compile time warnings